<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HexaTime</string>
    <string name="description">HexaTime displays time along with the corresponding hexadecimal color.</string>
    
    <string name="clock_typeface_summary">Change clock typeface.</string>
    <string name="clock_typeface_title">Font style</string>
    <string name="clock_dimens_summary">Make the clock larger or smaller.</string>
    <string name="clock_dimens_title">Clock size</string>
    <string name="clock_vertical_align_summary">Adjust the vertical position of clock.</string>
    <string name="clock_vertical_align_title">Vertical alignment</string> 
    <string name="clock_horizontal_align_summary">Adjust the horizontal position of clock.</string>
    <string name="clock_horizontal_align_title">Horizontal alignment</string>    
    <string name="clock_visibility_summary">Choose when the clock is shown or hidden.</string>
    <string name="clock_visibility_title">Clock visibility</string>
    <string name="time_format_summary">Switch between 24 and 12 hour.</string>
    <string name="time_format_title">Time format</string>    
    <string name="show_number_sign_summary">Toggle the display of the number sign</string>    
    <string name="show_number_sign_title">Show number sign</string>
   <!-- <string name="clock_addon_summary">Miscellaneous format changes for clock.</string>    
    <string name="clock_addon_title">Clock addons</string> --> 
    <string name="separator_style_summary">Choose the character used as the separator.</string>  
    <string name="separator_style_title">Separator style</string>
    <string name="color_range_summary">Incorporate date to stretch color spectrum.</string>
    <string name="color_range_title">Color range</string>
    <string name="enable_image_overlay_summary">Displays overlay on top of colored background.</string>
    <string name="enable_image_overlay_title">Enable pattern overlay</string>
    <string name="image_overlay_summary">Select a design of your choice.</string>
    <string name="image_overlay_title">Overlay pattern</string>
    <string name="image_overlay_opacity_summary">Adjust the transparency of the pattern overlay.</string>
    <string name="image_overlay_opacity_title">Overlay opacity</string>
    <string name="image_overlay_scale_summary">Resize the pattern overlay.</string>
    <string name="image_overlay_scale_title">Overlay scale</string>
    <string name="enable_set_custom_color_title">Enable custom color</string>
    <string name="enable_set_custom_color_summary">Set a color of your choice as the background.</string>
    <string name="set_custom_color_title">Color</string>
    <string name="set_custom_color_summary">Manually input hexadecimal color code.</string>   
    <string name="reduce_wallpaper_updates_title">Reduce wallpaper updates</string>    
    <string name="reduce_wallpaper_updates_summary">Enable if you are experiencing lag or performance issues.</string>    
    <string name="color_code_notation_summary">Switch between decimal and hexadecimal format.</string>    
    <string name="color_code_notation_title">Color code notation</string>

    <string name="clock_appearance">Clock Appearance</string>
    <string name="clock_size_and_position">Clock Size &amp; Position</string>
    <string name="background_appearance">Background Appearance</string>
    <string name="background_overlay">Background Overlay</string>
    <string name="advanced">Advanced</string>
    
    <string name="about">About</string>
    <string name="about_developer_summary">This app is written by Priyesh Patel.</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_contact_summary">Send me an email.</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_xda_summary">Visit the XDA thread for this app.</string>
    <string name="about_xda_title">XDA Thread</string>
    <string name="about_source_summary">View the apps code via GitHub.</string>
    <string name="about_source_title">Source</string>
    <string name="about_donate_summary">Buy me a cookie.</string>
    <string name="about_donate_title">Donate</string>
    
    <string name="lato_regular">Lato Regular</string>
    <string name="lato_light">Lato Light</string>
    <string name="roboto_regular">Roboto Regular</string>
    <string name="roboto_light">Roboto Light</string>
    <string name="robotoslab_regular">Roboto Slab Regular</string>
    <string name="robotoslab_light">Roboto Slab Light</string>
        
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="twelve_hour">12 hour</string>
    <string name="twenty_four_hour">24 hour</string>
    <string name="small_color_range">Small color range</string>
    <string name="large_color_range">Large color range</string>
    <string name="image_overlay_hex">Hexagon</string>
    <string name="image_overlay_grid">Grid</string> 
    <string name="image_overlay_dots">Dots</string> 
	<string name="image_overlay_circles">Circles</string>      
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="hide_number_sign">Hide all</string>
    <string name="show_number_sign">Show number sign</string>
    <string name="show_separator">Show separators</string>
    <string name="number_sign_separator">Number sign &amp; separators</string>
    
    <string name="separator_colon">Colon</string>
    <string name="separator_space">Space</string>
    <string name="separator_dot">Dot</string>
    <string name="separator_pipe">Pipe</string>    
    <string name="separator_slash">Slash</string>
    <string name="separator_none">None</string>
    
    <string name="always_visible">Always visible</string>
    <string name="lockscreen_hidden">Hidden on lockscreen</string>
    <string name="always_hidden">Always hidden</string>
    
    <string name="dim_background_title">Dim background</string>
    <string name="dim_background_summary">Darken the wallpaper color.</string>
    
    <string name="thanks">Thanks :)</string>
</resources>