<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="hexatime_settings" >

    <PreferenceCategory android:title="@string/clock_appearance" >
        <com.priyesh.hexatime.FontPickerDialog
            android:defaultValue="1"            
            android:key="FONT_STYLE"
            android:summary="@string/clock_typeface_summary"
            android:title="@string/clock_typeface_title" />
        <com.priyesh.hexatime.NoTitleListPref
            android:defaultValue="1"
            android:entries="@array/clock_size_names"
            android:entryValues="@array/clock_size_values"
            android:key="CLOCK_SIZE"
            android:summary="@string/clock_dimens_summary"
            android:title="@string/clock_dimens_title" />
        <com.priyesh.hexatime.NoTitleListPref
            android:defaultValue="1"
            android:entries="@array/clock_alignment_names"
            android:entryValues="@array/clock_alignment_values"
            android:key="CLOCK_ALIGNMENT"
            android:summary="@string/clock_align_summary"
            android:title="@string/clock_align_title" />
        <com.priyesh.hexatime.NoTitleListPref
            android:defaultValue="1"
            android:entries="@array/time_format_names"
            android:entryValues="@array/time_format_values"
            android:key="TIME_FORMAT"
            android:summary="@string/time_format_summary"
            android:title="@string/time_format_title" />
        <CheckBoxPreference
            android:key="NUMBER_SIGN"
            android:summary="@string/number_sign_summary"
            android:title="@string/number_sign_title" />
        <CheckBoxPreference
            android:key="CLOCK_HIDE"
            android:summary="@string/clock_hide_summary"
            android:title="@string/clock_hide_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/background_appearance" >
        <com.priyesh.hexatime.NoTitleListPref
            android:defaultValue="0"
            android:entries="@array/color_range_names"
            android:entryValues="@array/color_range_values"
            android:key="COLOR_RANGE"
            android:summary="@string/color_range_summary"
            android:title="@string/color_range_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about" >
        <Preference
            android:summary="@string/about_developer_summary"
            android:title="@string/about_developer_title" >
        </Preference>
        <Preference
            android:key="contact"
            android:summary="@string/about_contact_summary"
            android:title="@string/about_contact_summary" >
        </Preference>
        <Preference
            android:key="xda"
            android:summary="@string/about_xda_summary"
            android:title="@string/about_xda_title" >
        </Preference>
        <Preference
            android:key="source"
            android:summary="@string/about_source_summary"
            android:title="@string/about_source_title" >
        </Preference>
        <Preference
            android:key="donate"
            android:summary="@string/about_donate_summary"
            android:title="@string/about_donate_title" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>