<?xml version="1.0" encoding="UTF-8"?>
<!--
 AndroidSliderPreference Library originally Copyright (C) 2012 Jay Weisskopf
 and licensed under the MIT license.
 
 Additions to AndroidSliderPreference Library Copyright (C) 2014 Priyesh Patel
 and licensed under Apache License, Version 2.0.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slider_preference_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dip"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="8dip" >

    <TextView
        android:id="@+id/seekbar_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/c2"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/slider_preference_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:paddingTop="12dip"
        android:thumb="@drawable/seekbar_scrubber" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/leftButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:minHeight="36dp"
                android:minWidth="88dp"
                android:text="@string/left"
                android:textAllCaps="true"
                android:textColor="@color/c2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/centerButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:minHeight="36dp"
                android:minWidth="88dp"
                android:text="@string/center"
                android:textAllCaps="true"
                android:textColor="@color/c2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/rightButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:minHeight="36dp"
                android:minWidth="88dp"
                android:text="@string/right"
                android:textAllCaps="true"
                android:textColor="@color/c2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>